samples/_failures_safe/1761273735_8ce086_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79b15787.c: In function ‘main’:
./samples/SAFE/__tmp_79b15787.c:139:9: error: expected declaration or statement at end of input
  139 |         printf("Memory allocation failed\n");
      |         ^~~~~~
./samples/SAFE/__tmp_79b15787.c:139:9: error: expected declaration or statement at end of input
